--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,4 +2,12 @@
   padding-top: 0px;
 }
 
+#nested-comment {
+  margin-top: 60px;
+}
+
+.comment-reply {
+  display: none;
+}
+
 /*# sourceMappingURL=app.css.map */
